Building gradle sample in Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ android:
     - build-tools-20.0.0
   licenses:
     - android-sdk-license-5be876d5
+before_script:
+  - export TERM=dumb
 script:
   - mvn -f AndroidAnnotations/pom.xml install
-  - mvn -f examples/maveneclipse/pom.xml install
+  - mvn -f examples/maveneclipse/pom.xml install -Dandroidannotations.version=3.1-SNAPSHOT
+  - ./examples/gradle/gradlew build --build-file examples/gradle/build.gradle
