--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -26,6 +26,7 @@
         android:targetSdkVersion="16" tools:ignore="OldTargetApi"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name="org.androidannotations.test15.roboguice.SampleRoboApplication_"
@@ -87,6 +88,7 @@
         <activity android:name=".HierarchyViewerActivity_" />
         <activity android:name="org.androidannotations.test15.CustomTitleActivity_" />
         <activity android:name=".ActivityWithGenerics_" />
+        <activity android:name=".WakeLockActivity_" />
 
         <receiver android:name="org.androidannotations.test15.ereceiver.MyReceiver_" />
 
