Upgrade to Spring for Android 1.0.1

--- a/AndroidAnnotations/androidannotations-api/pom.xml
+++ b/AndroidAnnotations/androidannotations-api/pom.xml
@@ -45,6 +45,7 @@
 			<!-- spring-android-rest-template is required to use the Rest API -->
 			<groupId>org.springframework.android</groupId>
 			<artifactId>spring-android-rest-template</artifactId>
+			<version>1.0.1.RELEASE</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
