--- a/AndroidAnnotations/androidannotations/pom.xml
+++ b/AndroidAnnotations/androidannotations/pom.xml
@@ -56,6 +56,7 @@
             <!-- spring-android-rest-template is required to use the Rest API -->
             <groupId>org.springframework.android</groupId>
             <artifactId>spring-android-rest-template</artifactId>
+            <version>1.0.1.RELEASE</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
