Add android-2.3.1.jar to eclipse-dependencies

--- a/AndroidAnnotations/eclipse-dependencies/build.properties
+++ b/AndroidAnnotations/eclipse-dependencies/build.properties
@@ -16,4 +16,4 @@
 
 bin.includes = META-INF/,\
                codemodel-2.6.jar,\
-               android-1.6_r2.jar
+               android-2.3.1.jar
