--- a/AndroidAnnotations/eclipse-dependencies/.classpath
+++ b/AndroidAnnotations/eclipse-dependencies/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="codemodel-2.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="android-1.6_r2.jar"/>
+	<classpathentry exported="true" kind="lib" path="android-2.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
