--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -268,6 +268,7 @@
 					<version>2.13</version>
 					<configuration>
 						<configLocation>checkstyle-checks.xml</configLocation>
+						<suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
 						<consoleOutput>true</consoleOutput>
 					</configuration>
 				</plugin>
