Move Checkstyle execution to a separate profile for Travis
It can be really annoying for contributors for always fixing the code
due to broken build by Checkstyle even before starting implementing a
feature. That's why the Checkstyle execution is moved to a separate
profile what will be used by Travis CI. Contributors are still
encouraged to run Checkstyle manually before pushing code, but Travis
will reject malformatted code in the PRs anyway.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
   - export TERM=dumb
 
 script:
-  - mvn -f AndroidAnnotations/pom.xml install
+  - mvn -f AndroidAnnotations/pom.xml install -P travis
   - mvn -f examples/maveneclipse/pom.xml install -Dandroidannotations.version=3.3-SNAPSHOT
   - ./examples/gradle/gradlew build --build-file examples/gradle/build.gradle
 
