--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -186,12 +186,6 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.guava</groupId>
-				<artifactId>guava</artifactId>
-				<version>18.0</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
 				<groupId>org.springframework.android</groupId>
 				<artifactId>spring-android-rest-template</artifactId>
 				<version>1.0.1.RELEASE</version>
@@ -220,6 +214,10 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.1</version>
+					<configuration>
+					   <source>1.7</source>
+					   <target>1.7</target>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
