--- a/AndroidAnnotations/functional-test-1-5/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5/pom.xml
@@ -93,14 +93,13 @@
 		<dependency>
 			<groupId>org.robolectric</groupId>
 			<artifactId>robolectric</artifactId>
-			<version>2.3</version>
+			<version>2.4</version>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>com.android.support</groupId>
-					<artifactId>support-v4</artifactId>
-				</exclusion>
-			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-reflect</artifactId>
+			<version>1.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
