Add test to verify onActivityResult gets called in enhanced Fragments
This test verifies that #541 was correctly fixed.

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -88,6 +88,7 @@
         <activity android:name="org.androidannotations.test15.CustomTitleActivity_" android:theme="@android:style/Theme" />
         <activity android:name=".ActivityWithGenerics_" />
         <activity android:name=".WakeLockActivity_" />
+        <activity android:name=".FragmentStartedActivity_" />
 
         <receiver android:name="org.androidannotations.test15.ereceiver.MyReceiver_" />
 
