Only deploy with Travis when needed

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ android:
 before_script:
   - export TERM=dumb
 script:
-  - mvn -f AndroidAnnotations/pom.xml --s settings.xml deploy
+  - mvn -f AndroidAnnotations/pom.xml install
   - mvn -f examples/maveneclipse/pom.xml install -Dandroidannotations.version=3.3-SNAPSHOT
   - ./examples/gradle/gradlew build --build-file examples/gradle/build.gradle
+after_success:
+  - if [[ $TRAVIS_BRANCH == 'develop' && $TRAVIS_PULL_REQUEST == 'false' && $JAVA_HOME == '/usr/lib/jvm/java-7-oracle' ]]; then mvn -f AndroidAnnotations/pom.xml -s settings.xml deploy ; fi
