--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ script:
   - mvn -f examples/maveneclipse/pom.xml install -Dandroidannotations.version=3.3-SNAPSHOT
   - ./examples/gradle/gradlew build --build-file examples/gradle/build.gradle
 after_success:
-  - if [[ $TRAVIS_BRANCH == 'develop' && $TRAVIS_PULL_REQUEST == 'false' && $JAVA_HOME == '/usr/lib/jvm/java-7-oracle' ]]; then mvn -f AndroidAnnotations/pom.xml -pl androidannotations-bundle -am -DskipTests -Dmaven.javadoc.skip -s settings.xml deploy ; fi
+  - if [[ $TRAVIS_BRANCH == 'develop' && $TRAVIS_PULL_REQUEST == 'false' && $JAVA_HOME == '/usr/lib/jvm/java-7-oracle' ]]; then mvn -f AndroidAnnotations/pom.xml -pl androidannotations-bundle -am -DskipTests -Dquiet -s settings.xml deploy ; fi
