--- a/AndroidAnnotations/androidannotations-bundle/pom.xml
+++ b/AndroidAnnotations/androidannotations-bundle/pom.xml
@@ -30,6 +30,9 @@
 	<name>AndroidAnnotations Bundle</name>
 	<packaging>pom</packaging>
 
+    <properties>
+        <main.basedir>${project.parent.basedir}</main.basedir>
+    </properties>
 
 	<dependencies>
 		<dependency>
