--- a/AndroidAnnotations/functional-test-1-5/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5/pom.xml
@@ -30,6 +30,7 @@
 	<name>AndroidAnnotations functional test suite</name>
 
 	<properties>
+        <main.basedir>${project.parent.basedir}</main.basedir>
 		<jackson-version>1.9.11</jackson-version>
 		<simple-version>2.7.1</simple-version>
 		<spring-android-version>1.0.1.RELEASE</spring-android-version>
