--- a/examples/HelloWorldEclipse/.classpath
+++ b/examples/HelloWorldEclipse/.classpath
@@ -6,10 +6,11 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="src" path="libs"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="compile-libs/androidannotations-3.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
