--- a/examples/HelloWorldEclipse/.settings/org.eclipse.jdt.core.prefs
+++ b/examples/HelloWorldEclipse/.settings/org.eclipse.jdt.core.prefs
@@ -1,6 +1,6 @@
-#Sat Mar 26 10:01:35 CET 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
+org.eclipse.jdt.core.compiler.codegen.methodParameters=do not generate
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
 org.eclipse.jdt.core.compiler.compliance=1.6
