--- a/AndroidAnnotations/androidannotations-rest-spring/rest-spring-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-rest-spring/rest-spring-test/pom.xml
@@ -93,6 +93,12 @@
 			<groupId>org.robolectric</groupId>
 			<artifactId>robolectric</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.robolectric</groupId>
+            <artifactId>shadows-httpclient</artifactId>
+            <version>${robolectric.version}</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
 			<artifactId>fest-android</artifactId>
