--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -131,6 +131,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<main.basedir>${project.basedir}</main.basedir>
+		<robolectric.version>3.0</robolectric.version>
 	</properties>
 
 
@@ -185,15 +186,8 @@
 			<dependency>
 				<groupId>org.robolectric</groupId>
 				<artifactId>robolectric</artifactId>
-				<version>2.4</version>
+				<version>${robolectric.version}</version>
 				<scope>test</scope>
-
-				<exclusions>
-					<exclusion>
-						<groupId>com.android.support</groupId>
-						<artifactId>support-v4</artifactId>
-					</exclusion>
-				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>com.squareup</groupId>
