--- a/examples/gradle/build.gradle
+++ b/examples/gradle/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
     dependencies {
         // replace with the current version of the Android plugin
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:1.2.2'
         // the latest version of the android-apt plugin
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
@@ -28,10 +28,8 @@ apt {
     arguments {
         androidManifestFile variant.outputs[0].processResources.manifestFile
 		// if you have multiple outputs (when using splits), you may want to have other index than 0
-		
-        resourcePackageName 'org.androidannotations.gradle'
 
-        // If you're using Android NBS flavors you should use the following line instead of hard-coded packageName
+        // If you're using flavors you should use the following line instead of hard-coded packageName
         // resourcePackageName android.defaultConfig.packageName
 
         // You can set optional annotation processing options here, like these commented options:
@@ -41,11 +39,11 @@ apt {
 }
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "21.1.1"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 19
+        targetSdkVersion 22
     }
 }
