--- a/examples/RoboGuiceExample/src/main/AndroidManifest.xml
+++ b/examples/RoboGuiceExample/src/main/AndroidManifest.xml
@@ -4,14 +4,13 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="4"
-        android:targetSdkVersion="20" />
-
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:allowBackup="true" >
+        android:allowBackup="true"
+        android:name=".RoboGuiceExampleApplication"
+        >
+        <meta-data android:name="roboguice.modules" android:value="org.androidannotations.roboguiceexample.AstroModule"/>
         <activity
             android:name=".AstroGirl_"
             android:label="@string/app_name" >
