[maven-release-plugin] prepare for next development iteration

--- a/AndroidAnnotations/androidannotations-bundle/pom.xml
+++ b/AndroidAnnotations/androidannotations-bundle/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<artifactId>androidannotations-parent</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<version>3.3</version>
+		<version>3.4-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>androidannotations-bundle</artifactId>
