--- a/AndroidAnnotations/androidannotations/pom.xml
+++ b/AndroidAnnotations/androidannotations/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.androidannotations</groupId>
         <artifactId>androidannotations-parent</artifactId>
-        <version>3.3</version>
+        <version>3.3.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>androidannotations</artifactId>
