--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -293,6 +293,7 @@
 						<exclude>**/*_.java</exclude>
 						<exclude>**/.factorypath</exclude>
 						<exclude>**/project.properties</exclude>
+						<exclude>**/rebel.xml</exclude>
 					</excludes>
 					<strictCheck>true</strictCheck>
 				</configuration>
