Do not show warning about conflicting dependencies

--- a/AndroidAnnotations/functional-test-1-5/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5/pom.xml
@@ -167,6 +167,7 @@
 							<jvmArgument>-Xmx512m</jvmArgument>
 						</jvmArguments>
 					</dex>
+					<disableConflictingDependenciesWarning>true</disableConflictingDependenciesWarning>
 				</configuration>
 				<extensions>true</extensions>
 			</plugin>
