Tests for @InjectMenu

--- a/AndroidAnnotations/androidannotations/src/test/resources/org/androidannotations/menu/AndroidManifest.xml
+++ b/AndroidAnnotations/androidannotations/src/test/resources/org/androidannotations/menu/AndroidManifest.xml
@@ -23,6 +23,7 @@
 
     <application>
         <activity android:name="org.androidannotations.menu.OptionsMenuItemActivity_" />
+        <activity android:name="org.androidannotations.menu.InjectMenuActivity_" />
     </application>
 
 </manifest>
