--- a/AndroidAnnotations/functional-test-1-5/src/main/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
         <activity android:name=".receiver.ActivityWithReceiver_" />
         <activity android:name="org.androidannotations.test15.menu.OptionsMenuActivity_" />
         <activity android:name="org.androidannotations.test15.menu.OptionsMenuSubActivity_" />
+        <activity android:name="org.androidannotations.test15.menu.InjectMenuActivity_" />
         <activity android:name="org.androidannotations.test15.NoTitleFullscreenActivity_" />
         <activity android:name="org.androidannotations.test15.WindowFeatureActivity_" />
         <activity android:name="org.androidannotations.test15.ExtendingActivity_" />
