--- a/AndroidAnnotations/functional-test-1-5/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5/pom.xml
@@ -160,6 +160,7 @@
 				<artifactId>android-maven-plugin</artifactId>
 				<version>4.2.1</version>
 				<configuration>
+					<androidManifestFile>AndroidManifest.xml</androidManifestFile>
 					<sdk>
 						<platform>16</platform>
 					</sdk>
@@ -183,7 +184,6 @@
 						<arg>-Atrace=true</arg>
 						<arg>-AlogLevel=ERROR</arg>
 						<arg>-AlogFile=${project.build.directory}/functional-test.log</arg>
-						<arg>-AandroidManifestFile=${project.basedir}/src/main/AndroidManifest.xml</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
