--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,11 @@ script:
 
 after_success:
   - if [[ $TRAVIS_REPO_SLUG == 'excilys/androidannotations' && $TRAVIS_BRANCH == 'develop' && $TRAVIS_PULL_REQUEST == 'false' && $TRAVIS_JDK_VERSION == 'oraclejdk7' ]]; then mvn -f AndroidAnnotations/pom.xml -pl androidannotations-bundle -am -DskipTests -Dquiet -s settings.xml deploy ; fi
+
+notifications:
+  webhooks:
+    urls:
+      - $GITTER_WEBHOOK_URL
+    on_success: change
+    on_failure: always
+    on_start: false
