--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ after_success:
 notifications:
   webhooks:
     urls:
-      - $GITTER_WEBHOOK_URL
+      - secure: "aiAYnuvIz4XGgyvXdg7OZk8A2OKDRABUHJX6U4aszTYDOETWxwjRtmTdUisztH2+4dvB3BFGuwTuYXbC3h4vpqM2eUb584R2TVDmgloZ9263jN74uaJ04u8fbL+2mXtSbAGjBluDhEOBmGI5NZjlDYkAkguqzF6M9cT/yAIOW6g="
     on_success: change
     on_failure: always
     on_start: false
