--- a/AndroidAnnotations/androidannotations/test/pom.xml
+++ b/AndroidAnnotations/androidannotations/test/pom.xml
@@ -25,7 +25,7 @@
 		<version>4.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>functional-test-1-5</artifactId>
+	<artifactId>androidannotations-test</artifactId>
 	<packaging>apk</packaging>
 	<name>AndroidAnnotations functional test suite</name>
 
@@ -66,11 +66,6 @@
 			<groupId>org.roboguice</groupId>
 			<artifactId>roboguice</artifactId>
 			<version>3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.j256.ormlite</groupId>
-			<artifactId>ormlite-android</artifactId>
-			<version>4.48</version>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
