Fix Ormlite test project POM

--- a/AndroidAnnotations/ormlite/test/AndroidManifest.xml
+++ b/AndroidAnnotations/ormlite/test/AndroidManifest.xml
@@ -38,6 +38,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".OrmLiteOnDestroyActivity_" />
+
         <receiver android:name=".MyReceiver_" />
 
         <provider
