--- a/AndroidAnnotations/androidannotations-ormlite/ormlite-api/pom.xml
+++ b/AndroidAnnotations/androidannotations-ormlite/ormlite-api/pom.xml
@@ -20,7 +20,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<artifactId>ormlite-root</artifactId>
+		<artifactId>androidannotations-ormlite</artifactId>
 		<groupId>org.androidannotations</groupId>
 		<version>4.0-SNAPSHOT</version>
 	</parent>
