--- a/AndroidAnnotations/androidannotations-ormlite/ormlite-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-ormlite/ormlite-test/pom.xml
@@ -20,14 +20,14 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<artifactId>ormlite-root</artifactId>
+		<artifactId>androidannotations-ormlite</artifactId>
 		<groupId>org.androidannotations</groupId>
 		<version>4.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>ormlite-test</artifactId>
 	<packaging>apk</packaging>
-	<name>OrmLite plugin Tests</name>
+	<name>OrmLite plugin functional test suite</name>
 
 	<properties>
 		<main.basedir>${project.parent.parent.basedir}</main.basedir>
