Update examples for AndroidAnnotations 3.3.2

--- a/examples/RoboGuiceExample/build.gradle
+++ b/examples/RoboGuiceExample/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
     dependencies {
         // replace with the current version of the Android plugin
-        classpath 'com.android.tools.build:gradle:1.2.2'
+        classpath 'com.android.tools.build:gradle:1.2.3'
         // the latest version of the android-apt plugin
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
@@ -16,8 +16,8 @@ repositories {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
-def AAVersion = '4.0-SNAPSHOT' // change this to your desired version, for example the latest stable: 3.3.1
+apply plugin: 'com.neenbedankt.android-apt'
+def AAVersion = '4.0-SNAPSHOT' // change this to your desired version, for example the latest stable: 3.3.2
 
 dependencies {
     apt "org.androidannotations:androidannotations:$AAVersion"
