--- a/AndroidAnnotations/androidannotations-ormlite/ormlite-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-ormlite/ormlite-test/pom.xml
@@ -37,6 +37,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.androidannotations</groupId>
+			<artifactId>androidannotations</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.androidannotations</groupId>
 			<artifactId>ormlite</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -51,12 +56,6 @@
 		<dependency>
 			<groupId>com.google.android</groupId>
 			<artifactId>android</artifactId>
-			<version>4.1.1.4</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.android</groupId>
-			<artifactId>android-test</artifactId>
 			<version>4.1.1.4</version>
 			<scope>provided</scope>
 		</dependency>
@@ -92,12 +91,6 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
@@ -115,11 +108,6 @@
 					<sdk>
 						<platform>16</platform>
 					</sdk>
-					<dex>
-						<jvmArguments>
-							<jvmArgument>-Xmx512m</jvmArgument>
-						</jvmArguments>
-					</dex>
 					<disableConflictingDependenciesWarning>true</disableConflictingDependenciesWarning>
 				</configuration>
 				<extensions>true</extensions>
