--- a/AndroidAnnotations/functional-test-1-5/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<artifactId>androidannotations-parent</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<version>3.3.2</version>
+		<version>4.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>functional-test-1-5</artifactId>
