Create Otto plugin

--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -140,6 +140,7 @@
 	<modules>
 		<module>androidannotations-core</module>
 		<module>androidannotations-ormlite</module>
+		<module>androidannotations-otto</module>
 	</modules>
 
 	<dependencyManagement>
