--- a/AndroidAnnotations/androidannotations-otto/otto-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-otto/otto-test/pom.xml
@@ -20,30 +20,29 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
+		<artifactId>androidannotations-otto</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<artifactId>androidannotations-core</artifactId>
 		<version>4.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>androidannotations-test</artifactId>
+	<artifactId>otto-test</artifactId>
 	<packaging>apk</packaging>
-	<name>AndroidAnnotations functional test suite</name>
+	<name>Otto plugin functional test suite</name>
 
 	<properties>
 		<main.basedir>${project.parent.parent.basedir}</main.basedir>
-		<jackson-version>1.9.11</jackson-version>
-		<simple-version>2.7.1</simple-version>
-		<spring-android-version>1.0.1.RELEASE</spring-android-version>
-		<jackson-version>1.9.6</jackson-version>
-		<simple-version>2.4.1</simple-version>
-		<android-rome-version>1.0.0-r2</android-rome-version>
-		<checkstyle.excludes>**/R.java,**/BuildConfig.java,</checkstyle.excludes> 
+		<checkstyle.excludes>**/R.java,**/BuildConfig.java,</checkstyle.excludes>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.androidannotations</groupId>
 			<artifactId>androidannotations</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.androidannotations</groupId>
+			<artifactId>otto</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -57,86 +56,43 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.roboguice</groupId>
-			<artifactId>roboguice</artifactId>
-			<version>3.0</version>
-		</dependency>
-		<dependency>
-			<!-- spring-android-rest-template is required to use the Rest API -->
-			<groupId>org.springframework.android</groupId>
-			<artifactId>spring-android-rest-template</artifactId>
-		</dependency>
-		<dependency>
-			<!-- Using Jackson for JSON marshaling -->
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>${jackson-version}</version>
-		</dependency>
-		<dependency>
-			<!-- Using Simple for XML marshaling -->
-			<groupId>org.simpleframework</groupId>
-			<artifactId>simple-xml</artifactId>
-			<version>${simple-version}</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>stax</artifactId>
-					<groupId>stax</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>stax-api</artifactId>
-					<groupId>stax</groupId>
-				</exclusion>
-				<exclusion>
-					<groupId>xpp3</groupId>
-					<artifactId>xpp3</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>com.google.android</groupId>
-			<artifactId>support-v4</artifactId>
-			<version>r7</version>
+			<groupId>com.squareup</groupId>
+			<artifactId>otto</artifactId>
+			<version>1.3.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.robolectric</groupId>
 			<artifactId>robolectric</artifactId>
-			<version>2.4</version>
+			<version>2.3</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.easytesting</groupId>
-			<artifactId>fest-reflect</artifactId>
-			<version>1.4.1</version>
+
+			<exclusions>
+				<exclusion>
+					<groupId>com.android.support</groupId>
+					<artifactId>support-v4</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
 			<artifactId>fest-android</artifactId>
 			<version>1.0.8</version>
 			<scope>test</scope>
+
 			<exclusions>
-			<exclusion>
-				<groupId>com.android.support</groupId>
-				<artifactId>support-v4</artifactId>
-			</exclusion>
+				<exclusion>
+					<groupId>com.android.support</groupId>
+					<artifactId>support-v4</artifactId>
+				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.10.8</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>bouncycastle</groupId>
-			<artifactId>bcprov-jdk16</artifactId>
-			<version>140</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -144,7 +100,7 @@
 				<artifactId>android-maven-plugin</artifactId>
 				<version>4.2.1</version>
 				<configuration>
-					<androidManifestFile>AndroidManifest.xml</androidManifestFile>
+					<androidManifestFile>${project.basedir}/AndroidManifest.xml</androidManifestFile>
 					<sdk>
 						<platform>16</platform>
 					</sdk>
@@ -159,11 +115,6 @@
 					<source>1.6</source>
 					<target>1.6</target>
 					<showWarnings>true</showWarnings>
-					<compilerArgs>
-						<arg>-Atrace=true</arg>
-						<arg>-AlogLevel=ERROR</arg>
-						<arg>-AlogFile=${project.build.directory}/functional-test.log</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 
